--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@primeng/themes": "^19.0.9",
     "ngx-google-analytics": "^14.0.1",
+    "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.14",
     "tslib": "^2.3.0",
